--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-dump.ipynb
+test.ipynb
 docker-compose-mlflow
 .vscode-server
 .env
-/code/model
-/code/mlruns
-/app/models
+./code/model
+./code/mlruns
+./app/models
