--- a/docker-compose_deploy.yaml
+++ b/docker-compose_deploy.yaml
@@ -6,6 +6,8 @@ services:
     environment:
       - HOST=0.0.0.0
       - PORT=80
+    env_file:
+      - .env
     labels:
       # Allow Traefik to talk with your service
       - traefik.enable=true
